syntax = "proto3";

option java_package = "org.harryng.demo.controller.grpc.generated";
option java_multiple_files = true;
//option java_outer_classname = "HelloServiceProto";

message HelloWorldRequest {
  // a name to greet, default is "World"
  optional string name = 1;
}

message HelloWorldResponse {
  string greeting = 1;
}

service HelloWorldService {
  rpc SayHello(stream HelloWorldRequest) returns (stream HelloWorldResponse);
}